# tdd-excercise-808x-sac-tathya

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: lib.hpp.5D1C087E8EF5F802.idx  lib1.hpp.B38CB52804D15D98.idx  lib2.hpp.99C0F52448DFBEA6.idx  main.cpp.93DF8E78F3BB343C.idx  main.cpp.CA91B34BB5C5AA5C.idx  src.cpp.306AE963BA358A0A.idx  src.cpp.6479D18C54D243BA.idx  tdd.cpp.4827023504FA7E8A.idx  tdd.hpp.CF662CF01EEE17FF.idx  tdd_test.cpp.2754EFA1AB144CCF.idx  test.cpp.525BF86742D3B009.idx
app/: CMakeLists.txt  main.cpp
include/: getter_setter.hpp  tdd.hpp
libs/lib1/: CMakeLists.txt
reports/: app_cpplint_report.txt  cpplint_report.txt
tdd/: CMakeLists.txt  main.cpp  tdd.cpp
test/: CMakeLists.txt  main.cpp  tdd_test.cpp
